[BACK] add test + error response obj
